--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="http://at.alicdn.com/t/font_c9ax9489drhpvi.js"></script>
     <script src="/dist/build.js"></script>
   </body>
 </html>
