order,me,address

--- a/index.html
+++ b/index.html
@@ -6,11 +6,81 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-touch-fullscreen" content="yes" />
-    <title>趣鱼</title>
+    <title>天天果园</title>
   </head>
   <body>
+    <canvas id="canvas" style="position: fixed; left: 0; top: 0; width: 100%; "></canvas>
     <div id="app"></div>
-    <script src="http://at.alicdn.com/t/font_c9ax9489drhpvi.js"></script>
+    <script src="http://at.alicdn.com/t/font_ls1el4lmahnf80k9.js"></script>
     <script src="/dist/build.js"></script>
+    <script>
+      //定义画布宽高和生成点的个数
+      var WIDTH = window.innerWidth, HEIGHT = window.innerHeight, POINT = 15;
+      var canvas = document.getElementById('canvas');
+      canvas.width = WIDTH,
+      canvas.height = HEIGHT;
+      var context = canvas.getContext('2d');
+      context.fillStyle = 'rgba('+Math.floor(Math.random()*255)+','+Math.floor(Math.random()*255)+','+Math.floor(Math.random()*255)+',0.06)';
+      var circleArr = [];
+
+
+      //点：圆心xy坐标，半径，每帧移动xy的距离
+      function Circle (x, y, r, moveX, moveY) {
+        this.x = x,
+        this.y = y,
+        this.r = r,
+        this.moveX = moveX,
+        this.moveY = moveY;
+      }
+      //生成max和min之间的随机数
+      function num (max, _min) {
+        var min = arguments[1] || 0;
+        return Math.floor(Math.random()*(max-min+20)+min);
+      }
+      // 绘制原点
+      function drawCricle (cxt, x, y, r, moveX, moveY) {
+        var circle = new Circle(x, y, r, moveX, moveY)
+        cxt.beginPath()
+        cxt.arc(circle.x, circle.y, circle.r, 0, 2*Math.PI)
+        cxt.closePath()
+        cxt.fill();
+        return circle;
+      }
+      //初始化生成原点
+      function init () {
+        circleArr = [];
+        for (var i = 0; i < POINT; i++) {
+          circleArr.push(drawCricle(context, num(WIDTH), num(HEIGHT), num(15, 2), num(10, -10)/40, num(10, -10)/40));
+        }
+        draw();
+      }
+
+      //每帧绘制
+      function draw () {
+        context.clearRect(0,0,canvas.width, canvas.height);
+        for (var i = 0; i < POINT; i++) {
+          drawCricle(context, circleArr[i].x, circleArr[i].y, circleArr[i].r);
+        }
+      }
+
+      //调用执行
+      window.onload = function () {
+        init();
+        setInterval(function () {
+          for (var i = 0; i < POINT; i++) {
+            var cir = circleArr[i];
+            cir.x += cir.moveX;
+            cir.y += cir.moveY;
+            if (cir.x > WIDTH) cir.x = 0;
+            else if (cir.x < 0) cir.x = WIDTH;
+            if (cir.y > HEIGHT) cir.y = 0;
+            else if (cir.y < 0) cir.y = HEIGHT;
+            
+          }
+          draw();
+        }, 16);
+      }
+
+    </script>
   </body>
 </html>
