--- a/group.html
+++ b/group.html
@@ -6,13 +6,13 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-touch-fullscreen" content="yes" />
-    <title>{{ title }}</title>
+    <title>拼团{{ title }}</title>
   </head>
   <body>
     <canvas id="canvas" style="position: fixed; left: 0; top: 0; width: 100%; "></canvas>
     <div id="app"></div>
     <script src="http://at.alicdn.com/t/font_ls1el4lmahnf80k9.js"></script>
-    <script src="./dist/main.bundle.js"></script>
+    <script src="./dist/group.bundle.js"></script>
     <script src="./dist/particles.js"></script>
     
   </body>
