--- a/group.html
+++ b/group.html
@@ -6,7 +6,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-touch-fullscreen" content="yes" />
-    <title>拼团{{ title }}</title>
+    <title>第二个页面{{ title }}</title>
   </head>
   <body>
     <canvas id="canvas" style="position: fixed; left: 0; top: 0; width: 100%; "></canvas>
